F18: Complete binary file upload feature, also  Fixed Java 8 compatibility (trim().isEmpty() instead of isBlank())"