@@ -2,15 +2,13 @@ package com.library.shared;
 
 public class ServerResponse<T>
 {
-    // === Fields ===
     private String _status;
     private String _message;
     private T _data;
 
-    // === Constructors ===
     public ServerResponse(String status, String message, T data)
     {
-        if (status == null || status.isBlank())
+        if (status == null || status.trim().isEmpty())
             throw new IllegalArgumentException("status is required");
 
         _status = status;
@@ -18,13 +16,10 @@ public class ServerResponse<T>
         _data = data;
     }
 
-    // === Properties ===
     public String getStatus() { return _status; }
     public String getMessage() { return _message; }
     public T getData() { return _data; }
 
-    // === Methods ===
-    // CHANGE: Use "success" instead of "OK" to match client
     public static <T> ServerResponse<T> success(String message, T data)
     {
         return new ServerResponse<>("success", message, data);
